# p1-back

./: .env.example  .gitignore  Dockerfile  auth.py  database.py  demo_update.py  getmodels.py  main.py  models.py  pyproject.toml  requirements.txt  seed.py  test_mock_screenshot.py  test_screenshot_feature.py  test_screenshot_markings.py
.public-agdocs/guides/: GUIDE.md
.public-agdocs/specs/: ait-impl-1.md  ait-plan-1.md  auth-getuser-1.md  auth-starter.md  create-dockerfile.md  db-conn.md  fastapi-starter.md  fix-auth-1.md  fix-post-action.md  mark-screenshot-1.md  mark-screenshot-fix-1.md  mark-screenshot-fix-2.md  mark-screenshot-fix-3.md  mark-screenshot-impl-1.md  multimodel-env.md  reset-preserve-users.md  resetdata-route.md  router-api.md  update-shapes-route.md  update-text-schema.md  user-heartbeat-1.md
debug_screenshots/: mock_1_metadata.json  prompt_20251018_131331_9d516af7.txt
docs/: aitool-plan.md  coord-transform-debug-plan.md  map-img-plan.md  screenshot-debug-guide.md  screenshot-implementation-summary.md  screenshot-markings-plan.md  screenshot-quickstart.md
docs/debug_mark_assets/: actual_request.json
routes/: ai.py
services/: ai_validator.py  coordinate_translator.py  openai_service.py  screenshot_markers.py  screenshot_utils.py
