[project]
name = "p1-back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-dotenv",
    "sqlalchemy",
    "asyncpg",
    "passlib==1.7.4",
    "bcrypt==3.2.2",
    "python-jose[cryptography]==3.3.0",
    "python-multipart",
]
